# resolve-ai

./: .env.example  .gitignore  Dockerfile  README.md  config.py  deploy.md  main.py  pyproject.toml  test_results.txt
.agent/skills/dev-journal/: SKILL.md
.agent/skills/human-commits/: SKILL.md
.agent/skills/human-friendly-code/: SKILL.md
agents/: legal_analysis.py  llm_client.py  orchestrator.py  response.py  strategy.py  workflow.py
api/: main.py  routes.py
data/cdc/: cdc_raw.html
data/jurisprudencia/: stj_summaries.txt
evaluation/: golden_test_set.py  ragas_evaluator.py
frontend/: app.py
projetos/resolve-ai/: ARCHITECTURE.md  DEVELOPMENT_GUIDE.md  MVP_SPEC.md  PROMPTS_GUIDE.md  README.md  REFERENCES.md  ROADMAP.md  SETUP.md  TECH_DECISIONS.md
rag/: download_cdc.py  embedder.py  ingest.py  retrieval.py
tests/: test_agents.py  test_api.py  test_golden_set.py  test_rag.py  test_workflow.py
